fixed menu z-index

--- a/src/pages/Cabinet/CabinetMenu/CabinetMenu.module.scss
+++ b/src/pages/Cabinet/CabinetMenu/CabinetMenu.module.scss
@@ -8,6 +8,7 @@
   grid-template-columns: 90px 1fr 90px;
   position: sticky;
   top: 0;
+  z-index: 10;
 }
 
 .UserBlock {
